argo/overlays/istio/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-ui
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
